--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.security.user.name=user
+spring.security.user.password=password
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/app
+spring.datasource.username=app
+spring.datasource.password=app
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
