--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.security.user.name=user
 spring.security.user.password=password
-
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/app
 spring.datasource.username=app
 spring.datasource.password=app
