Add docker build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,19 @@
 version: '3'
 
 services:
+  app:
+    image: spring-boot-crm/sb
+    container_name: app
+    build: .
+    ports:
+      - '8080:8080'
+    expose:
+      - '8080'
+    networks:
+      - app
   db:
     image: mysql/mysql-server:8.0
-    container_name: mysql-8-0
+    container_name: db
     restart: always
     environment:
       MYSQL_DATABASE: 'app'
@@ -30,3 +40,4 @@ networks:
     driver: bridge
 volumes:
   my-db:
+    driver: local
